[package]
name = "neo-meting"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
openssl = "0.10.73"
rand = "0.8.5"
reqwest = { version = "0.12.18", features = ["json"] }
salvo = { version = "0.73.0", features = ["logging"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
