[package]
name = "neo-meting"
version = "0.1.0"
edition = "2021"

[features]
random-ip = []

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
openssl = "0.10.75"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json", "form"] }
salvo = { version = "0.88.1", features = ["logging"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
