[workspace]
members = ["crates/*"]
resolver = "2"
default-members = ["crates/neo-meting"]

[workspace.dependencies]
base64 = "0.22.1"
hex = "0.4.3"
openssl = "0.10.78"
rand = "0.10.1"
reqwest = { version = "0.13.3", features = ["json", "form"] }
salvo = { version = "0.93.0", features = ["logging"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
