[package]
name = "neo-meting"
version = "0.1.0"
edition = "2021"

[features]
random-ip = []

[dependencies]
base64.workspace = true
hex.workspace = true
openssl.workspace = true
rand.workspace = true
reqwest.workspace = true
salvo.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
